# validus

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  vstr.rs  vstrext.rs
