[package]
name = "validus"
version = "0.1.2"
edition = "2021"
authors = ["axionbuster"]
description = "A string validation library"
license = "MIT"
keywords = ["validation", "string"]
categories = ["rust-patterns"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
repository = "https://github.com/axionbuster/validus"

[package.metadata."docs.rs"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", optional = true }
thiserror = { version = "1.0.40", optional = true }

[features]
default = ["serde", "ext"]
ext = ["thiserror"]
cow = [] # experimental

[dev-dependencies]
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
