[package]
name = "validus"
version = "0.3.0"
edition = "2021"
authors = ["axionbuster"]
description = "A string validation library"
license = "MIT"
keywords = ["validation", "string"]
categories = ["rust-patterns"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
repository = "https://github.com/axionbuster/validus"

[package.metadata."docs.rs"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", optional = true }
thiserror = { version = "1.0.40", optional = true }

[features]
default = ["serde", "ext", "std"]
alloc = [] # integrate with smart pointers (e.g., Box) and String
std = ["alloc"] # implement std::error::Error (not available in `core` yet)
ext = ["std", "dep:thiserror"] # certain extensions require errors, and thus std
serde = ["std", "dep:serde"] # serde is a std feature due to its use of std::error::Error
cow = ["alloc"] # experimental feature

[dev-dependencies]
regex = "1.8.3"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
